--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="I am a website developer with a particular interest in making things
   simple and automating daily tasks. I try to keep up with security and
   best practices, and am always looking for new things to learn.">
-  <title>Waqar Muhammad | Digital Business Card</title>
+  <title>Muhammad Waqar | Digital Business Card</title>
 </head>
 
 <body>
